[GTK] fix compilation warning in GtkInputMethodFilter.cpp https://bugs.webkit.org/show_bug.cgi?id=87475

Patch by Lu Guanqun <guanqun.lu@intel.com> on 2012-05-25
Reviewed by Martin Robinson.

* platform/gtk/GtkInputMethodFilter.cpp:
(WebCore::GtkInputMethodFilter::setWidget):

Canonical link: https://commits.webkit.org/105270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118518 268f45cc-cd09-0410-ab3c-d52691b4dbfc